--- a/app/views/assignments/_assignment_item.html.erb
+++ b/app/views/assignments/_assignment_item.html.erb
@@ -1,6 +1,6 @@
 
 <div class="assignment index-entry">
-  <a href="<%= assignment_path(assignment.id) %>" 
+  <a href="#<%= assignment.id %>" 
   data-assignment-id="<%= assignment.id %>"><span class="name"><%= assignment.name %></span></a>
 
 
