Started to work on analysis thumbnails in index.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -266,7 +266,7 @@ ul.authors, ul.instructors {
 }
 
 
-.assignment_group.index-entry {
+.vertical-index index-entry {
   padding: 0;
 
   height: 500px;
