--- a/app/views/analyses/_analysis.html.erb
+++ b/app/views/analyses/_analysis.html.erb
@@ -1,3 +1,59 @@
+<% 
+itemsPerRow = 3 
+
+## Character/list limits.
+title_max = 100
+summary_max = 200
+field_of_study_max = 300;
+versions_limit = -1 ## most recent
+%>
+
+<% if @i % itemsPerRow == 0 %>
+<div class="row">
+<% end %>
+
+<div class="col-md-4">
+  <div class="analysis index-entry">
+    <a href="<%= analysis_path(analysis) %>" 
+      data-analysis-id="<%= analysis.id %>"
+      ><%= render(partial: "verticals_shared/listing_thumbnail", 
+          locals: {vertical: analysis}) %></a>
+
+    <div class="item-content">
+      <a href="<%= analysis_path(analysis) %>" 
+      data-analysis-id="<%= analysis.id %>"><span class="name"><%= get_snippet(analysis.name, title_max) %></span></a>
+
+      <span class="metadata">
+        <span class="author"><%= analysis.creator.full_name %></span> 
+      </span>
+
+      <span class="summary"><%= get_snippet(analysis.summary, summary_max) %></span>
+    </div>
+
+    <div class="item-footer">
+      <span class="metadata">
+        <% 
+        fields_of_study = analysis.assignments.map{|a| a.field_of_study}.uniq 
+        unless fields_of_study.nil? or fields_of_study.size == 0  %>
+          <span class="fields-of-study">
+            Used in: 
+            <%=  get_snippet(oxford_comma_list(fields_of_study), field_of_study_max) %>
+            </span>
+        <% end   %>
+
+      </span>
+    </div>
+  </div>
+</div> <%# End col-md-3 %>
+
+<% if @i == @total-1 || @i % itemsPerRow == itemsPerRow-1 %>
+</div>
+<% end %>
+
+<% @i += 1 %>
+
+
+<% if false %>
 <div data-analysis-id="<%= analysis.id %>" class="analysis index-entry">
 
   <span class="name"><%= link_to analysis.name, analysis_path(analysis) %></span>
@@ -23,3 +79,4 @@
   </span>
   
 </div>
+<% end %>
