--- a/app/views/assignment_groups/index.html.erb
+++ b/app/views/assignment_groups/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Assignments") %>
-<div class="container">
+<div class="container vertical-index assignment_group-index">
   <div class="row">
 
     <h1>Assignments
