--- a/app/views/software/index.html.erb
+++ b/app/views/software/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Software") %>
-<div class="container">
+<div class="container vertical-index software-index">
 
   <h1>Software
 
@@ -12,6 +12,10 @@
   <% end %>
   </h1>
   <div id="software-entries" class="entries">
+    <% 
+    @i = 0 
+    @total = @software.size
+    %>
     <%= render @software %>
   </div>
 
