--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -1,54 +1,70 @@
 <% provide(:title, @software.name) %>
 <div class="container software-page" data-software-id="<%= @software.id %>">
-  <h1><span class="name"><%= @software.name %></span>
-  <% if can_edit? %>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
-      Enable editing
-    </button>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
-      Disable editing
-    </button>
 
-    <span class="edit-toggle">
-      <%= link_to edit_software_path(@software.id)  do  
-        %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Software">
-		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button>
-      <% end %>
-      <%= link_to @software, method: :delete, data: {
-          confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Software">
-		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
-		</button>
-      <% end %>
-    </span>
-  <% end %>
-  </h1>
-
-  <div class="tags">
-    <% if can_edit? %>
-      <span class="edit-toggle">
-		  <a href="<%= vertical_tag_index_path @software %>">
-			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
-			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			</button>
-		  </a>
-		   <!-- got merged into ^^
-		   <%-# new_vertical_tag_path @software -%>
-		   -->
-		</span>
-    <% end %>
-	Tags:
-      <%= render(partial: "tags/tag_badge", 
-        collection: sort_by(@software.tags, :text), as: :tag,
-        locals: {print_header: true, vertical: @software}) || 
-        "There are currently no tags associated with this software." %>
-  </div>
+  <div class="row">
+    <div class="col-sm-8">
   
-  <div class="summary-wrapper">
-    <h2>Summary</h2>
-    <span class="summary"><%= @software.summary %></span>
+      <h1><span class="name"><%= @software.name %></span>
+      <% if can_edit? %>
+        <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+          Enable editing
+        </button>
+        <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+          Disable editing
+        </button>
+
+        <span class="edit-toggle">
+          <%= link_to edit_software_path(@software.id)  do  
+            %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Software">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+          <% end %>
+          <%= link_to @software, method: :delete, data: {
+              confirm: "Are you sure you want to delete this page?"} do  
+            %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Software">
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+        </button>
+          <% end %>
+        </span>
+      <% end %>
+      </h1>
+
+      <div class="tags">
+        <% if can_edit? %>
+          <span class="edit-toggle">
+          <a href="<%= vertical_tag_index_path @software %>">
+          <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </button>
+          </a>
+          <!-- got merged into ^^
+          <%-# new_vertical_tag_path @software -%>
+          -->
+        </span>
+        <% end %>
+      Tags:
+          <%= render(partial: "tags/tag_badge", 
+            collection: sort_by(@software.tags, :text), as: :tag,
+            locals: {print_header: true, vertical: @software}) || 
+            "There are currently no tags associated with this software." %>
+      </div>
+      
+      <div class="summary-wrapper">
+        <h2>Summary</h2>
+        <span class="summary"><%= @software.summary %></span>
+      </div>
+
+    </div>
+
+
+    <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/show_thumbnail", 
+          locals: {vertical: @software}) %>
+    </div>
   </div>
+
+
+
 
   <div class="description-wrapper">
     <h2>Overview</h2>
@@ -56,6 +72,8 @@
       <%= sanitize_text(@software.description).html_safe %>
     </div>
   </div>
+
+      
   <hr>
   <h2 class="m-1">Materials</h2>
   <div class="row">
