--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,55 +1,65 @@
 <% provide(:title, @dataset.name) %>
 <div class="container dataset-page" data-dataset-id="<%= @dataset.id %>">
-  <h1><span class="name"><%= @dataset.name %></span>
-  <% if can_edit? %>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
-      Enable editing
-    </button>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
-      Disable editing
-    </button>
 
-    <span class="edit-toggle">
-      <%= link_to edit_dataset_path(@dataset.id)  do  
-        %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Dataset">
-		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button>
-      <% end %>
-      <%= link_to @dataset, method: :delete, data: {
-          confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Dataset">
-		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
-		</button>
-      <% end %>
-    </span>
-  <% end %>
-  </h1>
+  <div class="row">
+    <div class="col-sm-8">
+      <h1><span class="name"><%= @dataset.name %></span>
+      <% if can_edit? %>
+        <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+          Enable editing
+        </button>
+        <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+          Disable editing
+        </button>
 
-  <div class="tags">
-    <% if can_edit? %>
-      <span class="edit-toggle">
-		  <a href="<%= vertical_tag_index_path @dataset %>">
-			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
-			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			</button>
-		  </a>
-		   <!-- got merged into ^^
-		   <%-# new_vertical_tag_path @dataset -%>
-		   -->
-		</span>
-    <% end %>
-	Tags:
-    
-      <%= render(partial: "tags/tag_badge", 
-        collection: sort_by(@dataset.tags, :text), as: :tag,
-        locals: {print_header: true, vertical: @dataset}) || 
-        "There are currently no tags associated with this dataset." %>
-    
-  </div>
-  
-  <div class="summary-wrapper">
-    <h2>Summary</h2>
-    <span class="summary"><%= @dataset.summary %></span>
+        <span class="edit-toggle">
+          <%= link_to edit_dataset_path(@dataset.id)  do  
+            %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Dataset">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+          <% end %>
+          <%= link_to @dataset, method: :delete, data: {
+              confirm: "Are you sure you want to delete this page?"} do  
+            %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Dataset">
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+        </button>
+          <% end %>
+        </span>
+      <% end %>
+      </h1>
+
+      <div class="tags">
+        <% if can_edit? %>
+          <span class="edit-toggle">
+          <a href="<%= vertical_tag_index_path @dataset %>">
+          <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </button>
+          </a>
+          <!-- got merged into ^^
+          <%-# new_vertical_tag_path @dataset -%>
+          -->
+        </span>
+        <% end %>
+      Tags:
+        
+          <%= render(partial: "tags/tag_badge", 
+            collection: sort_by(@dataset.tags, :text), as: :tag,
+            locals: {print_header: true, vertical: @dataset}) || 
+            "There are currently no tags associated with this dataset." %>
+        
+      </div>
+      
+      <div class="summary-wrapper">
+        <h2>Summary</h2>
+        <span class="summary"><%= @dataset.summary %></span>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/show_thumbnail", 
+          locals: {vertical: @dataset}) %>
+    </div>
   </div>
 
   <div class="description-wrapper">
