--- a/app/views/examples/_example.html.erb
+++ b/app/views/examples/_example.html.erb
@@ -1,3 +1,60 @@
+<% 
+itemsPerRow = 3 
+
+## Character/list limits.
+title_max = 100
+summary_max = 200
+field_of_study_max = 300;
+versions_limit = -1 ## most recent
+%>
+
+<% if @i % itemsPerRow == 0 %>
+<div class="row">
+<% end %>
+
+<div class="col-md-4">
+  <div class="example index-entry">
+    <a href="<%= example_path(example) %>" 
+      data-example-id="<%= example.id %>"
+      ><%= render(partial: "verticals_shared/listing_thumbnail", 
+          locals: {vertical: example}) %></a>
+
+    <div class="item-content">
+      <a href="<%= example_path(example) %>" 
+      data-example-id="<%= example.id %>"><span class="name"><%= get_snippet(example.name, title_max) %></span></a>
+
+      <span class="metadata">
+        <span class="author"><%= example.creator.full_name %></span> 
+      </span>
+
+      <span class="summary"><%= get_snippet(example.summary, summary_max) %></span>
+    </div>
+
+    <div class="item-footer">
+      <span class="metadata">
+        <% 
+        fields_of_study = example.assignments.map{|a| a.field_of_study}.uniq 
+        unless fields_of_study.nil? or fields_of_study.size == 0  %>
+          <span class="fields-of-study">
+            Used in: 
+            <%=  get_snippet(oxford_comma_list(fields_of_study), field_of_study_max) %>
+            </span>
+        <% end   %>
+
+      </span>
+    </div>
+  </div>
+</div> <%# End col-md-3 %>
+
+<% if @i == @total-1 || @i % itemsPerRow == itemsPerRow-1 %>
+</div>
+<% end %>
+
+<% @i += 1 %>
+
+
+
+<% if false %>
 <div class="example index-entry">
 <a href="<%= example_path(example) %>" 
   data-example-id="<%= example.id %>">
@@ -43,3 +100,4 @@
 </span>
 
 </div>
+<% end %>
