--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -1,55 +1,67 @@
 <% provide(:title, "How-to -- #{@example.title}") %>
 <div class="container resource-modification">
-  <h1><span class="name"><%= @example.title %></span>
-    <% if can_edit? %>
-      <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
-        Enable editing
-      </button>
-      <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
-        Disable editing
-      </button>
 
-      <span class="edit-toggle">
-        <%= link_to edit_example_path(@example)  do %>
-          <button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit How-to">
-		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		  </button>
+  <div class="row">
+    <div class="col-sm-8">
+    
+      <h1><span class="name"><%= @example.title %></span>
+        <% if can_edit? %>
+          <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+            Enable editing
+          </button>
+          <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+            Disable editing
+          </button>
+
+          <span class="edit-toggle">
+            <%= link_to edit_example_path(@example)  do %>
+              <button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit How-to">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          </button>
+            <% end %>
+            <%= link_to @example, method: :delete, data: {
+                confirm: "Are you sure you want to delete this page?"} do  
+              %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete How-to">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+          </button>
         <% end %>
-        <%= link_to @example, method: :delete, data: {
-            confirm: "Are you sure you want to delete this page?"} do  
-          %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete How-to">
-			  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
-			</button>
-		<% end %>
-      </span>
-    <% end %>
-  </h1>
+          </span>
+        <% end %>
+      </h1>
 
-  <div class="tags">
-	<% if can_edit? %>
-	  <span class="edit-toggle">
-		  <a href="<%= vertical_tag_index_path @example %>">
-			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
-			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			</button>
-		  </a>
-		   <!-- got merged into ^^
-		   <%-# new_vertical_tag_path @example -%>
-		   -->
-		</span>
-	<% end %>
-	Tags:
-	
-	  <%= render(partial: "tags/tag_badge", 
-		collection: sort_by(@example.tags, :text), as: :tag,
-		locals: {print_header: true, vertical: @example}) || 
-		"There are currently no tags associated with this how-to." %>
-	
-  </div>
-	  
-  <h2>Summary</h2>
-  <div class="description">
-	<%= @example.summary %>
+      <div class="tags">
+      <% if can_edit? %>
+        <span class="edit-toggle">
+          <a href="<%= vertical_tag_index_path @example %>">
+          <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </button>
+          </a>
+          <!-- got merged into ^^
+          <%-# new_vertical_tag_path @example -%>
+          -->
+        </span>
+      <% end %>
+      Tags:
+      
+        <%= render(partial: "tags/tag_badge", 
+        collection: sort_by(@example.tags, :text), as: :tag,
+        locals: {print_header: true, vertical: @example}) || 
+        "There are currently no tags associated with this how-to." %>
+      
+      </div>
+        
+      <h2>Summary</h2>
+      <div class="description">
+      <%= @example.summary %>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/show_thumbnail", 
+          locals: {vertical: @example}) %>
+    </div>
   </div>
 
   <h2>Overview</h2>
