--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -359,7 +359,23 @@ ul.authors, ul.instructors {
 
 
 .analysis-page, .software-page, .dataset-page, example-page {
+
   .thumbnail-wrapper.show-view {
     margin-top: 20px;
+    background-size: cover;
+    background-position-x: 50%;
+    background-position-y: center;
+
+
+    height: 175px;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+
+    // border-bottom: 1px solid #ccc;
+
+    img {
+      width: 100%;
+    }
   }
 }
