--- a/app/views/verticals_shared/_show_thumbnail.html.erb
+++ b/app/views/verticals_shared/_show_thumbnail.html.erb
@@ -5,6 +5,11 @@ Expects at least:
   vertical -- Anything with a thubmnail field.
 %>
 
-<div class="thumbnail-wrapper show-view">
-  <%= image_tag(vertical.thumbnail.small.url) if vertical.thumbnail? %>
-</div>
+<div class="thumbnail-wrapper show-view" 
+  <% if vertical.thumbnail? %>
+    style="background-image: url('<%= vertical.thumbnail.tile.url %>')">
+    <%# image_tag(vertical.thumbnail.tile.url) %>
+  <% else %>
+    >
+  <% end %>
+</div>  
