--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "How-to -- #{@example.title}") %>
-<div class="container resource-modification">
+<div class="container resource-modification example-page">
 
   <div class="row">
     <div class="col-sm-8">
