Created an initial new user stub modal form.

--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -30,6 +30,10 @@
           
           </div>
         </div>
+
+        Can't find the author you want? Create a stub account for the author:
+        <%= render(partial: "users/stub_user_form_trigger") %>
+
       </div>
 
       <div class="form-group">
@@ -124,5 +128,5 @@
     </div>
   </div>
 
-
+  <%= render(partial: "users/stub_user_form") %>
 </div>
