--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -31,8 +31,10 @@
           </div>
         </div>
 
-        Can't find the author you want? Create a stub account for the author:
-        <%= render(partial: "users/stub_user_form_trigger") %>
+        <div class="add-stub-user-modal-button-wrapper">
+          Can't find an instructor you want? Create a stub account for them: 
+          <%= render(partial: "users/stub_user_form_trigger") %>
+        </div>
 
       </div>
 
