--- a/app/views/users/_stub_user_form.html.erb
+++ b/app/views/users/_stub_user_form.html.erb
@@ -31,8 +31,8 @@ Call this partial *at the bottom* of your page (below any form).
           </div>
 
           <div class="form-group">
-            <label>Email</label> (no emails will be sent; this is only so this 
-            account can be claimed in the future by whomever this email belongs to)
+            <label>Email</label> (no emails will be sent; an email is only required so this 
+            account can be claimed in the future by whomever it belongs to)
             <input class="form-control" type="text" name="user[email]">
           </div>
 
@@ -42,7 +42,7 @@ Call this partial *at the bottom* of your page (below any form).
       </div>
 
       <div class="user-stub-form-toggle user-stub-wait hidden">
-        ...waiting...
+        ...waiting to hear back...
       </div>
 
     </div>
