--- a/app/views/users/_stub_user_form_trigger.html.erb
+++ b/app/views/users/_stub_user_form_trigger.html.erb
@@ -2,4 +2,4 @@
 Adds a button to trigger the stub user form modal to appear.
 %>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".new-user-stub-modal">Add stub user account</button>
+<button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target=".new-user-stub-modal">Add stub user account</button>
